--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vacunación Coronavirus - Certificado de vacunaci&#xF3;n Covid-19</title>
-    <link href="images/bootstrap.css" rel="stylesheet" />
+    <link href="https://github.com/vacunacioncovid19/.gov.ar/blob/main/bootstrap.css" rel="stylesheet" />
     <link href="https://github.com/vacunacioncovid19/.gov.ar/blob/main/toastr.css" rel="stylesheet" />
     <link rel="stylesheet" href="images/site1679.css?6" />
     <link rel="preconnect" href="https://fonts.gstatic.com/">
