--- a/index.html
+++ b/index.html
@@ -8,15 +8,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vacunación Coronavirus - Certificado de vacunaci&#xF3;n Covid-19</title>
-    <link href="images/bootstrap.css" rel="stylesheet" />
-    <link href="images/toastr.css" rel="stylesheet" />
     <link href="bootstrap.css" rel="stylesheet" />
     <link href="toastr.css" rel="stylesheet" />
-    <link rel="stylesheet" href="images/site1679.css?6" />
+    <link rel="stylesheet" href="site1679.css?6" />
     <link rel="preconnect" href="https://fonts.gstatic.com/">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;600&amp;display=swap" rel="stylesheet">
 
-    <link href="images/all.css" rel="stylesheet" />
     <link href="all.css" rel="stylesheet" />
 
 </head>
